--- a/.github/workflows/test_cygwin.yml
+++ b/.github/workflows/test_cygwin.yml
@@ -40,7 +40,7 @@ jobs:
 
         - name: Configure Git
           run: |
-            git config --global 
+            git config --global core.autocrlf input
 
         - name: Explore Environment
           run: |
