Add verbose output, modify setup print

--- a/.github/workflows/test_cygwin.yml
+++ b/.github/workflows/test_cygwin.yml
@@ -56,4 +56,6 @@ jobs:
         - name: Print Output from Cygwin Install (pwsh)
           shell: pwsh
           run: |
-            echo "Setup: ${{ steps.cygwin-install.outputs.setup }}"
+            SETUP_WIN='${{ steps.cygwin-install.outputs.setup }}'
+
+            echo "Setup: $SETUP_WIN"
